[form-builder] Correct smiley, no animation and hide on mobile (#678)

--- a/packages/@sanity/form-builder/src/inputs/common/styles/UploadPlaceholder.css
+++ b/packages/@sanity/form-builder/src/inputs/common/styles/UploadPlaceholder.css
@@ -1,27 +1,5 @@
 @import 'part:@sanity/base/theme/variables-style';
 
-@keyframes eye-right_d {
-  0% {
-    d: path('M4.75,0.75C4.75,0.75,2.95914,0.75,0.75,0.75C-1.45914,0.75,-3.25,0.75,-3.25,0.75C-3.25,0.75,-1.45914,0.75,0.75,0.75C2.95914,0.75,4.75,0.75,4.75,0.75Z'); } 100% { d: path('M4.75,0.75C4.75,2.95914,2.95914,4.75,0.75,4.75C-1.45914,4.75,-3.25,2.95914,-3.25,0.75C-3.25,-1.45914,-1.45914,-3.25,0.75,-3.25C2.95914,-3.25,4.75,-1.45914,4.75,0.75Z');
-  }
-}
-
-@keyframes eye-left_d {
-  0% {
-    d: path('M4.75,0.75C4.75,0.75,2.95914,0.75,0.75,0.75C-1.45914,0.75,-3.25,0.75,-3.25,0.75C-3.25,0.75,-1.45914,0.75,0.75,0.75C2.95914,0.75,4.75,0.75,4.75,0.75Z'); } 100% { d: path('M4.75,0.75C4.75,2.95914,2.95914,4.75,0.75,4.75C-1.45914,4.75,-3.25,2.95914,-3.25,0.75C-3.25,-1.45914,-1.45914,-3.25,0.75,-3.25C2.95914,-3.25,4.75,-1.45914,4.75,0.75Z');
-  }
-}
-
-@keyframes smile_d {
-  0% {
-    d: path('M0,0C0,0,4.5,0,10,0C15.5,0,19,0,19,0');
-  }
-
-  100% {
-    d: path('M0,0C0,0,4,5,9.5,5C15,5,19,0,19,0');
-  }
-}
-
 .root {
   display: flex;
   align-items: center;
@@ -38,18 +16,6 @@
 
 .hasFocus {
   composes: root;
-
-  @nest & .eyeRight {
-    animation: eye-right_d 0.3s linear both;
-  }
-
-  @nest & .eyeLeft {
-    animation: eye-left_d 0.3s linear both;
-  }
-
-  @nest & .smile {
-    animation: smile_d 0.3s linear both;
-  }
 }
 
 .noFocus {
@@ -58,11 +24,14 @@
 
 .iconContainer {
   font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: var(--small-padding);
 }
 
 .strong {
-  font-weight: 600;
-  font-size: var(--font-size-large);
+  font-weight: 500;
   margin: 0;
   padding: 0;
 }
@@ -70,6 +39,11 @@
 .dropFile,
 .pasteFile {
   padding: 1rem;
+  display: none;
+
+  @media (--screen-medium) {
+    display: block;
+  }
 }
 
 .pasteFile {
